  See the editor's right mouse menu or tolls popup (ctrl+t).

Data compare: New submenu in SQL result's "Compare selected cells" menu
  which allows to compare cells to clipboard.

Refactoring: The DBDiff-Plugin's functionality was moved to SQuirreL's core.
  The DBDiff-Plugin won't be shipped anymore
  and in case it is still found it is programmatically kept from being loaded.

Bug fixes:

SQL result tables: Copy as markdown and comparing table data failed when row numbers were displayed.

When non-breaking space where pasted into SQuirreL's editor
  they broke SQL reformatting and probably caused other problems, too.
  Now when text is pasted into SQuirreL's editor
  non-breaking space are replaced by ordinary spaces.

Find in preferences/configurations dialog: Fixed UI refresh problem of "Details" panel.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/15
  SQL result: The display of the result row limit was corrected
  in case the number of rows read matched the number of rows in the result.

Compare functions: Refactoring including some bug fixes.

Improved title of cells compare dialog and corrected the diffs left/right display.

Saved Sessions: Fixed restoring the active editor
  when a Saved Sessions was saved (ctrl+alt+shift+s) or committed to GIT (ctrl+alt+shift+k).

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/14
  The DB login dialog was missing the user name text field.
  The DB login dialog is shown when an Alias without auto logon is connected.

Fixed inconsistencies in DBDiff preferences tab,
  see menu Files --> Global Preferences --> tab "DB diff"



4.6.0 (06/04/2023)
==================

Enhancements:

Changed default of the "Quote identifiers in scripts" check box from checked to unchecked.
  See Global Preferences --> tab SQL Scripts
  This change concerns new installations only. For reference see discussion in bug #1506.

Change tracking: GIT revision dialog now offers to compare GIT revisions