@@ -9,6 +9,7 @@ SessionSQLPropertiesPanel.fetchSize=Fetch Rows at once
 SessionSQLPropertiesPanel.limitsqlhistorysize=Limit SQL History Combo Size
 SessionSQLPropertiesPanel.rows=rows
 SessionSQLPropertiesPanel.sharesqlhistory=Share SQL History
+SessionSQLPropertiesPanel.sharesqlhistory.tooltip=Shares the SQL history between all SQL panels and reloads the history on next application start.
 SessionSQLPropertiesPanel.showresultsmd=Show SQL Results MetaData (can slow application)
 SessionSQLPropertiesPanel.sql=SQL
 SessionSQLPropertiesPanel.sqlentryarea=SQL Entry Area
